Added Service level tests for all services and converted services and controller methods to use Result<T> instead of exceptions